[package]
name = "mlnet2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorous = "1.0.10"
dfdx = "0.11.1"
minifb = "0.24.0"
plotters = "0.3.4"
plotters-bitmap = "0.3.2"
rand = "0.8.5"

[profile.release]
lto = true
